--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "one page, one application. builded by webpack",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --display-modules --display-chunks --config build/webpack.config.js"
+    "build": "webpack --display-modules --display-chunks --config build/webpack.config.js",
+    "dev": "webpack-dev-server --inline --hot --config build/webpack.config.js"
   },
   "keywords": [
     "opoa",
@@ -24,5 +25,8 @@
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.0"
+  },
+  "dependencies": {
+    "webpack-dev-server": "^2.7.1"
   }
 }
