--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --display-modules --display-chunks --config build/webpack.config.js",
-    "dev": "webpack-dev-server --inline --hot --config build/webpack.config.js"
+    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js"
   },
   "keywords": [
     "opoa",
@@ -21,12 +21,13 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.5",
     "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.0"
   },
   "dependencies": {
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.7.1"
   }
 }
