--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "one page, one application. builded by webpack",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --display-modules --display-chunks --config build/webpack.config.js",
+    "build": "webpack --display-modules --display-chunks --config build/webpack.config.prod.js",
     "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js"
   },
   "keywords": [
