--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --display-modules --display-chunks --config build/webpack.config.prod.js",
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js"
+    "dev": "webpack-dev-server  --config build/webpack.config.dev.js"
   },
   "keywords": [
     "opoa",
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.0"
   }
 }
