--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "optimize-css-assets-webpack-plugin": "^3.1.1",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.0"
   },
   "dependencies": {
+    "uglify-js": "^3.0.28",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
